client/src/App.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');

* {
    margin: 0px;
    padding: 0px;
    box-sizing: border-box;

}

main {
    background: #F8FAFC;
    min-height: 100vh;
}

body {
    overflow: hidden
}


#logo {
    width: 333px;
    height: 37px;
    margin-top: 15px;
    margin-left: 15px; 
}

header {
    display: flex; 
    border-bottom: solid 2px lightgray; 
    justify-content: space-between;
    align-items: center; 
}


.form {
    display: flex; 
    justify-content: center;
    padding: 20px;
}

input[type="range"] {
    display: flex;
    justify-content: center;
}

label {
    display: flex;
    justify-content: center;
}

input[type=text] {
    width: 150px;
    height: 150px;
    margin-bottom: 20px;
    border: none; 
    transition: 0.3s all; 
    text-align: center; 
    white-space: normal !important;
    word-break: break-word; 
}

input[type=text]:focus {
    outline: none;
    box-shadow: 8px 8px 0px black;
    transform: translate(-2px, -2px); 
}

input[type="range"] {
    display: block; 
    margin: 0 auto;
    cursor: pointer
}

input[type="submit"] {
    all: unset;
    background-color: skyblue;
    display: block;
    margin: 0 auto;
    padding: 10px; 
    cursor: pointer; 
    transition: 0.3s all;
}

input[type="submit"]:hover {
    outline: none; 
    box-shadow: 4px 4px 0px black
}

.content {
    display: flex;
    justify-content: center;
    overflow: hidden;
    background-color: #E0F2FE;
    color: #0F172A;
    width: 100%;
    height: 100vh; 
    border-radius: 0px 0px 15px 15px;
}

#value {
    display: flex;
    justify-content: center;
}

.myChart {
    flex: 1; 
}

.tracker-page #parent-container {
    display: flex;
    width: 100%;
}

.form-section {
    width: 300px; 
}

#canvas-div {
    display: flex;

    justify-content: center;
    flex: 1;
    width: 100%;
    max-width: 700px; 
    max-height: 350px; 
    padding-top: 10px;
    
}

#myChart {
    width: 100% !important;
    height: 100% !important;
}

#mood-data {
    display: flex;
    flex: 1; 
    flex-direction: column;
    margin: 0 auto;
    align-items: center;
}

#hidden-container {
    display: none; 
    flex-direction: column;
    align-items: center;
    font-family: "Open Sans", sans-serif;
    background-color: #1E3A5F; 
    color: white; 
    padding: 15px; 
    border-radius: 10px;
}

#clickpoint {
    display: flex; 
    font-family: "Open Sans", sans-serif;
    
}

#bodyList {
    display: flex; 
}

#entryCard {
    display: flex;
    flex-direction: column;
    align-items: center;
    flex: 1
}

#entriesList {
    display: flex; 
    align-items: center; 
    gap: 5px; 
    background: #FFFFFF;
    border-radius: 14px;
    padding: 12px 10px;
    margin: 5px;
    transition: all 0.15s ease; 
}

.entryGroup {
    height: 375px; 
    overflow-y: scroll;
    width: 450px; 
}

.entryNoteOverflow {
    width: 130px; 
    text-align: center;
    overflow-wrap: break-word; 
}

/* hides for chrome, safari, opera */
.entryGroup::-webkit-scrollbar {
  display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
.entryGroup {
  -ms-overflow-style: none;  /* IE and Edge */
  scrollbar-width: none;  /* Firefox */
}

.moodGroup {
    display: flex;
    padding-right: 5px;
    width: 60px; 
}

.moodDetails {
    display: flex;
    flex-direction: column; 
    align-items: center;
}

#entriesList:hover {
    transform: translateY(-1px);
    box-shadow: 0 4px 14px skyblue;
}

.delete, .edit, .save, .cancel {
    margin-left: 10px;
    outline: none; 
    border: none; 
    background-color: lightblue;
    padding: 10px; 
    transition: 0.3s all; 
}

.edit:hover, .save:hover, .cancel:hover {
    background-color: rgb(145, 218, 248);
    cursor: pointer
}

.delete {
    background-color: rgb(239, 103, 103);
    cursor: pointer; 
}

.delete:hover {
    background-color: rgb(244, 148, 148)
}

.save-cancel-group {
    text-align: center;
    padding: 10px; 

}

.save, .cancel{
    display: inline-block;  
    
}



#line-break {
    width: 100%
}

#moodChart {
    display: flex; 
    width: 90%;
    max-width: 1000px;
    height: 400px;
    justify-content: center; 
}

#signoutlink {
    display: flex;
    justify-content: flex-end;
    color: rgb(0, 0, 0);
    transition: all 0.3s;
    cursor: pointer;
    position: relative;
    right: 15px; 
}

#signoutlink:hover {
    color: rgb(93, 93, 93); 
}

.lds-parent {
    display: flex;
    flex-direction: column; 
    justify-content: center; 
    align-items: center;
    position: fixed; /* Fixed to the screen */
    top: 0;
    left: 0;
    width: 100vw;   /* Full width */
    height: 100vh;  /* Full screen height */
    background: rgba(255, 255, 255, 0.8); /* Optional: dimmed background */
    z-index: 9999;  /* Keeps it on top */
}

.lds-ring,
.lds-ring div {
  box-sizing: border-box;
}
.lds-ring {
  position: relative;
  width: 80px;
  height: 80px;
}
.lds-ring div {
  box-sizing: border-box;
  display: block;
  position: absolute;
  width: 64px;
  height: 64px;
  margin: 8px;
  border: 8px solid currentColor;
  border-radius: 50%;
  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
  border-color: currentColor transparent transparent transparent;
}
.lds-ring div:nth-child(1) {
  animation-delay: -0.45s;
}
.lds-ring div:nth-child(2) {
  animation-delay: -0.3s;
}
.lds-ring div:nth-child(3) {
  animation-delay: -0.15s;
}
@keyframes lds-ring {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

.no-entries {
    padding: 10px; 
}

.no-graph {
    padding: 10px; 
}

.editMoodNumber {
    text-align: center;
}

